added basic tags

--- a/htmlBasics.html
+++ b/htmlBasics.html
@@ -3,9 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>HTML BASICS</title>
 </head>
 <body>
+  <h1>I AM MUSIC</h1>
+  <h2>Opium</h2>
+  <h3>Playboi</h3>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, eveniet?</p>
+  <a href="https://i.pinimg.com/736x/5a/f0/89/5af089d53cd8fe75d31f373fcc340a16.jpg">I AM MUSIC ABLUM COVER</a>
+  <img src="https://i.pinimg.com/736x/5a/f0/89/5af089d53cd8fe75d31f373fcc340a16.jpg" alt="I AM MUSIC ABLUM COVER">
+
   
 </body>
 </html>
+
